crates/cli/tests/snapshots/help__fn.snap
---
source: crates/cli/tests/help.rs
expression: "help(&[\"fn\", \"--help\"])"
---
Function catalog

Usage: omacell fn [OPTIONS] <COMMAND>

Commands:
  list  List the function catalog
  doc   Print one function's documentation

Options:
      --json                  Machine-readable stdout (and stderr errors)
      --dry-run               Validate writes without changing files
      --set <KEY=VALUE>       Overlay a dotted config key (`appearance.grid_lines=false`). Repeatable
      --config <FILE>         Explicit config file; replaces `~/.config/omacell/config.toml`
      --theme <FILE>          Explicit theme `colors.toml`; wins over `OMACELL_THEME`
  -q, --quiet                 Suppress non-error human output
  -v, --verbose...            Increase log verbosity
      --from-workbook <FILE>  Workbook whose frozen settings overlay configuration
  -h, --help                  Print help
