crates/cli/tests/snapshots/help__keys_check.snap
---
source: crates/cli/tests/help.rs
expression: "help(&[\"keys\", \"check\", \"--help\"])"
---
Compare classic chords to Hyprland `bindings.lua`

Usage: omacell keys check [OPTIONS]

Options:
      --hyprland <HYPRLAND>   Path to `bindings.lua` (default `$XDG_CONFIG_HOME/hypr/bindings.lua`)
      --json                  Machine-readable stdout (and stderr errors)
      --dry-run               Validate writes without changing files
      --set <KEY=VALUE>       Overlay a dotted config key (`appearance.grid_lines=false`). Repeatable
      --config <FILE>         Explicit config file; replaces `$XDG_CONFIG_HOME/omacell/config.toml`
      --theme <FILE>          Explicit Omacell role overlay TOML; wins over `OMACELL_THEME`
  -q, --quiet                 Suppress non-error human output
  -v, --verbose...            Increase log verbosity
      --from-workbook <FILE>  Workbook whose frozen settings overlay configuration
  -h, --help                  Print help
