crates/cli/tests/snapshots/help__mcp.snap
---
source: crates/cli/tests/help.rs
expression: "help(&[\"mcp\", \"--help\"])"
---
MCP server (stdio, or `--socket`)

Usage: omacell mcp [OPTIONS]

Options:
      --json                  Machine-readable stdout (and stderr errors)
      --socket <SOCKET>       Unix socket path. Default is stdio
      --book <BOOK>           Workbook to open before serving
      --dry-run               Validate writes without changing files
      --set <KEY=VALUE>       Overlay a dotted config key (`appearance.grid_lines=false`). Repeatable
      --config <FILE>         Explicit config file; replaces `$XDG_CONFIG_HOME/omacell/config.toml`
      --theme <FILE>          Explicit Omacell role overlay TOML; wins over `OMACELL_THEME`
  -q, --quiet                 Suppress non-error human output
  -v, --verbose...            Increase log verbosity
      --from-workbook <FILE>  Workbook whose frozen settings overlay configuration
  -h, --help                  Print help
