crates/cli/tests/snapshots/help__recalc.snap
---
source: crates/cli/tests/help.rs
expression: "help(&[\"recalc\", \"--help\"])"
---
Recalculate a workbook

Usage: omacell recalc [OPTIONS] <BOOK>

Arguments:
  <BOOK>  Workbook path

Options:
      --json                  Machine-readable stdout (and stderr errors)
      --write                 Write the recalculated workbook back
      --dry-run               Validate writes without changing files
      --set <KEY=VALUE>       Overlay a dotted config key (`appearance.grid_lines=false`). Repeatable
      --config <FILE>         Explicit config file; replaces `~/.config/omacell/config.toml`
      --theme <FILE>          Explicit theme `colors.toml`; wins over `OMACELL_THEME`
  -q, --quiet                 Suppress non-error human output
  -v, --verbose...            Increase log verbosity
      --from-workbook <FILE>  Workbook whose frozen settings overlay configuration
  -h, --help                  Print help
